syntax = "proto3";

package auth;

option go_package = "go-gRPC-Authentication/backend/proto/auth;auth";

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
    rpc Healthz(HealthzRequest) returns (HealthzResponse);
}

message RegisterRequest {
    string email = 1;
    string username = 2;
    string password = 3;
}

message RegisterResponse {
    string userId = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

message RefreshTokenRequest {
    string refreshToken = 1;
}

message RefreshTokenResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

message ValidateTokenRequest {
    string accessToken = 1;
}

message ValidateTokenResponse {
    string userId = 1;
    string username = 2;
    string email = 3;
}

message HealthzRequest {}

message HealthzResponse {
    string status = 1;
}